<resources>
    <string name="app_name">Share Chores</string>
    <string name="action_settings">Settings</string>
    <string name="font_title">casual</string>
    <string name="login_username">Enter User Name</string>
    <string name="login_password">Enter Password</string>
    <string name="button_login">Login</string>
    <string name="link_about_us">About Us</string>
    <string name="link_registration">New User? Sign Up here</string>
    <string name="link_view_UserId">View User Ids</string>
    <string name="title_activity_show_about_us">ShowAboutUsActivity</string>

    <!-- About us Activity-->
    <string name="Title_About_Us">About Us</string>
    <string name="Content_About_Us">This is an app to help people living in a shared accomodation to track the daily household chores and find a way to make peace at home. </string>
    <string name="link_Login">Interested? Login now </string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <!-- Terms and Conditions Activity -->
    <string name="title_tnc">Terms and Conditions</string>

    <!-- Registration Activity -->
    <string name="Title_Registration">Register</string>
    <string name="activity_register_name">Registration</string>
    <string name="register_name">Enter Name</string>
    <string name="register_phone">Enter Phone Number</string>
    <string name="register_email">Enter Email Address</string>
    <string name="register_password">Enter Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="button_cancel_registration">Cancel</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="link_TnC">Terms and Conditions</string>
    <string name="title_activity_show_tn_c">ShowTnCActivity</string>
    <string name="title_activity_welcome_page">welcomePageActivity</string>

    <!-- Welcome Page Activity -->
    <string name="title_welcome">Welcome !</string>
    <string name="button_create_room">Create New Room</string>
    <string name="button_view_room">View Existing Room</string>
    <string name="button_logout">Logout</string>
    <string name="title_activity_create_room">CreateRoomActivity</string>


    <!-- Create Room Activity-->
    <string name="title_create_room">Create Room</string>
    <string name="enter_room_name">Name of your Room</string>
    <string name="enter_room_description">Describe your Room (optional)</string>
    <string name="button_cancel_room_creation">Cancel</string>
    <string name="button_room_creation">Create</string>
    <string name="title_activity_view_room">ViewRoomActivity</string>

    <!-- View Room Activity -->
    <string name="button_my_tasks">My Tasks</string>
    <string name="button_logs">Logs</string>
    <string name="button_room_duties">Room Duties</string>
    <string name="button_room_amends">Room Amends</string>
    <string name="button_view_roommates">View Roommates</string>
    <string name="link_back_to_home">Home</string>
    <string name="title_activity_my_tasks">MyTasksActivity</string>

    <!-- My Tasks -->
    <string name="title_my_task">My Tasks</string>
    <string name="spinner_duties_text">Duties</string>
    <string name="label_due_date">Due Date</string>
    <string name="button_my_task_Ok">Ok</string>
    <string name="button_my_task_Add_Log">Add Log</string>
    <string name="title_activity_add_log">AddLogActivity</string>

    <!-- Update Log -->
    <string name="label_duty_completed_date">Completed Date</string>
    <string name="label_amend_completed_date">Amend Date</string>
    <string name="label_amend">Amend</string>
    <string name="button_task_updation">Ok</string>
    <string name="button_task_updation_cancelation">Cancel</string>
    <string name="button_select_completed_date">Completed Date</string>
    <string name="title_activity_view_roommates">ViewRoommatesActivity</string>

    <!-- View Roommates-->
    <string name="button_Add_Roommate">Add Roommate</string>
    <string name="title_view_Roommates">My Roommates</string>

    <!--Add Roommates -->
    <string name="text_add_roommate_title">Please provide the details of the roommate you want to add</string>
    <string name="button_add_roommate_cancel">Cancel</string>
    <string name="button_add_roommate_ok">Ok</string>
    <string name="hint_add_roommate_name">Name of the Roommate</string>
    <string name="hint_add_roommate_email">Email of the Roommate</string>

    <!-- View Duties-->
    <string name="button_Add_Duty">Add Duty</string>
    <string name="title_view_Duties">Room Duties</string>
    <string name="title_activity_room_duties">Room Duties</string>

    <!--Add Duties -->
    <string name="text_add_duty_title">Please provide the details of the duty you want to add</string>
    <string name="hint_add_duty_name">Name of the Duty</string>
    <string name="hint_add_duty_description">Duty Description</string>
    <string name="button_add_duty_cancel">Cancel</string>
    <string name="button_add_duty_ok">Ok</string>

    <!-- View Amends-->
    <string name="button_Add_Amend">Add Amend</string>
    <string name="title_view_Amends">Room Amends</string>

    <!--Add Amends -->
    <string name="text_add_Amend_title">Please provide the details of the Amend you want to add</string>
    <string name="hint_add_Amend_name">Name of the Amend</string>
    <string name="hint_add_Amend_description">Amend Description</string>
    <string name="button_add_amend_cancel">Cancel</string>
    <string name="button_add_amend_ok">Ok</string>
    <string name="title_activity_room_amends">RoomAmendsActivity</string>
    <string name="title_activity_view_assignment">ViewAssignmentActivity</string>

    <!-- View Assignment-->
    <string name="title_view_assignment">View Assignment</string>
    <string name="button_by_duties">View By Duties</string>
    <string name="button_by_roommates">View By Roommates</string>
    <string name="button_chat_room">Chat Room</string>
    <string name="title_activity_view_userid">ViewUseridActivity</string>
</resources>
