<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="edu.drexel.ea464.doomies.ShowTnCActivity"
        tools:showIn="@layout/activity_show_tn_c">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textSize="70dp"
            android:text="@string/Title_About_Us"
            android:fontFamily="@string/font_title"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:text="@string/Content_About_Us"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:clickable="true"
            android:text="@string/link_Login"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:onClick="backToLogin"
            />

    </LinearLayout>
</ScrollView>
