<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="edu.drexel.ea464.doomies.CreateRoomActivity"
        tools:showIn="@layout/activity_create_room">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textSize="50dp"
            android:text="@string/title_create_room"
            android:fontFamily="@string/font_title"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/ErrorCreateRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textColor="@color/RED"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/roomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:hint="@string/enter_room_name"
            />

        <EditText
            android:id="@+id/roomDescription"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:inputType="textMultiLine"
            android:hint="@string/enter_room_description"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/button_cancel_room_creation"
                android:onClick="backToWelcomePage"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:background="@color/colorPrimary"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/button_room_creation"
                android:onClick="goToRoom"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:background="@color/colorPrimary"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>