<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="edu.drexel.ea464.doomies.MyTasksActivity"
        tools:showIn="@layout/activity_my_tasks">

        <Spinner
            android:id="@+id/spinner_my_tasks_duties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
          />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:text="@string/label_due_date"
            />

        <TextView
            android:id="@+id/view_my_task_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/button_my_task_Ok"
                android:onClick="backToViewRoom"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:background="@color/colorPrimary"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/button_my_task_Add_Log"
                android:onClick="addLog"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:background="@color/colorPrimary"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>